--- a/egg/zoo/emergent_captioner/finetuning/configs/sr_clip_2.yml
+++ b/egg/zoo/emergent_captioner/finetuning/configs/sr_clip_2.yml
@@ -1,4 +1,4 @@
-DEBUG : True  # if true : model saving, logging turned off.  
+DEBUG : False  # if true : model saving, logging turned off.  
 INIT_VAL : True
 GREEDY_BASELINE : False
 SAVE_BEST_METRIC : True # to save nothing : = False and checkpoint_freq = 0
@@ -10,58 +10,54 @@ train_method : "discriminative" # (discriminative, cider, mle)
 prefix_len : 10
 warmup_ratio : 0.034
 official_clipcap_weights : /home/manugaur/official_clipcap/coco_weights.pt
-num_workers : 8
-CAPS_PER_IMG_train: 1 # maybe use in CL
-CAPS_PER_IMG_val: 4 # NLG eval
+num_workers : 16
+CAPS_PER_IMG_train: 5 # maybe use in CL
+CAPS_PER_IMG_val: 5 # NLG eval
 fp16: False
 diff_lr: False
 contrastive : False
 reinforce : True
-mllm : "clipcap" # {llava, clipcap}
-
+mllm : "clipcap"
 #lora
 lora : True
 lora_rank : 32
-clip_mlp_ft : False
-finetune_model : llm
+clip_mlp_ft : True
+log_spice : False
+
+finetune_model : clip # {gpt, clip} # automatically freeze gpt.transformer or CLIP
+clip_text : False
 freeze_wte : True
 freeze_adapter : False
 
-#hparams:
-# temp : 0.3
-# max_new_tokens : 50
-# lora_rank : 8
-# iters_per_eval : 180 # eval every 30 mins
-# log_spice : False
-
 neg_mining:
-  curricullum : {"medium" : 4} # "easy" : 3, "medium": 7, "hard" : 20} #indexed from 1 {"medium" : 3, "hard" : 10}
-  bag_size : 5 
+  curricullum : {"rand" : 10, "medium" : 20} #,  "medium" : 5, "hard" : 10} # indexed from 1
+  bag_size : 5
   save_using_neg : False #save model i.e best on neg_dataloader 
   val_bag_size : 5
-  val_level : "hard"
+  val_level : "rand"
 
 opts: 
   baseline : mean
-  n_epochs : 4
-  batch_size : 35
+  n_epochs : 20
+  batch_size : 350
   lr : 5e-8 #2e-5
   max_len : 50
-  checkpoint_freq : 0
-  num_workers : 8
+  checkpoint_freq : 1
+  num_workers : 16
   dataset_dir : /home/manugaur/coco
-  # mle_model_path : /home/manugaur/EGG/checkpoints/blip2mistral/mle/best.pt #it loads only sender.clipcap (adapter + llm)
+  mle_model_path : /home/manugaur/EGG/checkpoints/blip2mistral/mle/best.pt #it loads only sender.clipcap (adapter + llm)
   checkpoint_dir : /home/manugaur/EGG/checkpoints/blip2mistral/sr
-  recv_clip_model : ViT-L/14@336px #ViT-B/32
+  recv_clip_model : ViT-B/32 #ViT-L/14@336px
+
 WANDB:
-  logging : False
+  logging : True
   sweep : False
   sweep_id: ""
   sweep_run_count : 100
   entity : "manugaur"
   project : "emergent_captioner"
-  run_name :  llava_lora_5_layers_r8_temp0.3_medium_bsz5 #suffix to "sr_{data}_"
-  log_mmvp_all : True
+  run_name :  clip_ft_10R20M_lr5e8_bsz5_wte_frozen #suffix to "sr_{data}_"
+  log_mmvp_all : False
 
 inference : 
   batch_size : 128
