--- a/egg/zoo/emergent_captioner/finetuning/configs/sr.yml
+++ b/egg/zoo/emergent_captioner/finetuning/configs/sr.yml
@@ -2,7 +2,7 @@ DEBUG : False  # if true : model saving, logging turned off.
 INIT_VAL : True
 GREEDY_BASELINE : False
 SAVE_BEST_METRIC : False # to save nothing : = False and checkpoint_freq = 0
-ONLY_INFERENCE : False
+ONLY_INFERENCE : True
 ONLY_VAL : False
 
 captions_type : "coco" #coco, (mistral, mistral_4), blip_holistic
@@ -38,17 +38,13 @@ neg_mining:
 opts: 
   baseline : mean
   n_epochs : 20
-  batch_size : 100
-<<<<<<< HEAD
+  batch_size : 250
   lr : 5e-8 #2e-5
-=======
-  lr : 7e-8 #2e-5
->>>>>>> temp
   max_len : 50
   checkpoint_freq : 1
   num_workers : 16
   dataset_dir : /home/manugaur/coco
-  mle_model_path : /home/manugaur/EGG/checkpoints/blip2mistral/mle/best.pt #it loads only sender.clipcap (adapter + llm)
+  # mle_model_path : /home/manugaur/EGG/checkpoints/blip2mistral/mle/best.pt #it loads only sender.clipcap (adapter + llm)
   checkpoint_dir : /home/manugaur/EGG/checkpoints/blip2mistral/sr
   recv_clip_model : ViT-B/32 #ViT-L/14@336px
 
@@ -59,11 +55,7 @@ WANDB:
   sweep_run_count : 100
   entity : "manugaur"
   project : "emergent_captioner"
-<<<<<<< HEAD
-  run_name :  final_lr_5e8 #suffix to "sr_{data}_"
-=======
-  run_name :  final # _lr_7e8 #suffix to "sr_{data}_"
->>>>>>> temp
+  run_name :  2R6M10H_bsz3_final # _lr_7e8 #suffix to "sr_{data}_"
   log_mmvp_all : False
 
 inference : 
