--- a/egg/zoo/emergent_captioner/finetuning/configs/sr_1.yml
+++ b/egg/zoo/emergent_captioner/finetuning/configs/sr_1.yml
@@ -1,5 +1,5 @@
-DEBUG : False  # if true : model saving, logging turned off.  
-INIT_VAL : True
+DEBUG : True  # if true : model saving, logging turned off.  
+INIT_VAL : False
 GREEDY_BASELINE : False
 SAVE_BEST_METRIC : True # to save nothing : = False and checkpoint_freq = 0
 ONLY_INFERENCE : False
@@ -18,15 +18,21 @@ diff_lr: False
 contrastive : False
 reinforce : True
 mllm : "clipcap"
+
+
 #lora
 lora : True
-lora_rank : 32 #64 for clip
-clip_mlp_ft : True
-log_spice : False
-clip_text : False  
 finetune_model : clip # {gpt, clip} # automatically freeze gpt.transformer or CLIP
+lora_rank : 32
+clip_mlp_ft : True
+adapter_lora : True
+adapter_rank : 32
+clip_text : False 
+
+# freezing layers
 freeze_wte : True
 freeze_adapter : False
+log_spice : False
 
 neg_mining:
   curricullum : {"rand" : 20} #,  "medium" : 5, "hard" : 10} # indexed from 1
@@ -37,11 +43,11 @@ neg_mining:
 
 opts: 
   baseline : mean
-  n_epochs : 20
+  n_epochs : 1
   batch_size : 100
   lr : 9e-8 #2e-5
   max_len : 50
-  checkpoint_freq : 0
+  checkpoint_freq : 1
   num_workers : 16
   dataset_dir : /home/manugaur/coco
   mle_model_path : /home/manugaur/EGG/checkpoints/blip2mistral/mle/best.pt #it loads only sender.clipcap (adapter + llm)
@@ -55,7 +61,7 @@ WANDB:
   sweep_run_count : 100
   entity : "manugaur"
   project : "emergent_captioner"
-  run_name :  lr9e8_lora_r32_mlp_ft # _lr_7e8 #suffix to "sr_{data}_"
+  run_name :  debug #lr9e8_lora_r32_mlp_ft 
   log_mmvp_all : False
 
 inference : 
