--- a/egg/zoo/emergent_captioner/finetuning/configs/sr_1.yml
+++ b/egg/zoo/emergent_captioner/finetuning/configs/sr_1.yml
@@ -1,5 +1,5 @@
-DEBUG : False  # if true : model saving, logging turned off.  
-INIT_VAL : False
+DEBUG : False # if true : model saving, logging turned off.  
+INIT_VAL : True
 GREEDY_BASELINE : False
 SAVE_BEST_METRIC : True # to save nothing : = False and checkpoint_freq = 0
 ONLY_INFERENCE : False
@@ -25,7 +25,7 @@ lora : True
 finetune_model : clip # {gpt, clip} # automatically freeze gpt.transformer or CLIP
 lora_rank : 32
 clip_mlp_ft : True
-adapter_lora : True
+adapter_lora : False
 adapter_rank : 32
 clip_text : False
 
@@ -61,7 +61,7 @@ WANDB:
   sweep_run_count : 100
   entity : "manugaur"
   project : "emergent_captioner"
-  run_name :  adapter_r32 #lr9e8_lora_r32_mlp_ft 
+  run_name :  clip_ft_lr9e8_mlpr32 #adapter_r32 #lr9e8_lora_r32_mlp_ft 
   log_mmvp_all : False
 
 inference : 
