--- a/egg/zoo/emergent_captioner/finetuning/configs/sr_2.yml
+++ b/egg/zoo/emergent_captioner/finetuning/configs/sr_2.yml
@@ -1,4 +1,4 @@
-DEBUG : False  # if true : model saving, logging turned off.  
+DEBUG : True # if true : model saving, logging turned off.  
 INIT_VAL : False
 GREEDY_BASELINE : False
 SAVE_BEST_METRIC : True # to save nothing : = False and checkpoint_freq = 0
@@ -22,11 +22,11 @@ mllm : "clipcap"
 
 #lora
 lora : True
-finetune_model : clip # {gpt, clip} # automatically freeze gpt.transformer or CLIP
+finetune_model : both # {gpt, clip} # automatically freeze gpt.transformer or CLIP
 lora_rank : 32
 clip_mlp_ft : True
-adapter_lora : True
-adapter_rank : 64
+adapter_lora : False
+adapter_rank : 32
 clip_text : False
 
 # freezing layers
@@ -45,7 +45,7 @@ opts:
   baseline : mean
   n_epochs : 20
   batch_size : 100
-  lr : 9e-8 #2e-5
+  lr : 5e-8 #2e-5
   max_len : 50
   checkpoint_freq : 1
   num_workers : 16
@@ -61,12 +61,12 @@ WANDB:
   sweep_run_count : 100
   entity : "manugaur"
   project : "emergent_captioner"
-  run_name :  adapter_r64 #lr9e8_lora_r32_mlp_ft 
+  run_name :  both_ft_lr5e8_mlpr32 #adapter_r32 #lr9e8_lora_r32_mlp_ft 
   log_mmvp_all : False
 
 inference : 
   batch_size : 128
   output_dir : /home/manugaur/EGG/inference_preds/
 
-#DEBUG, ONLY_INFERENCE,  INIT_VAL, logging, save_using_neg
+#DEBUG, INIT_VAL | ONLY_INFERENCE,  , logging, save_using_neg
 #CKPT_DIR = f"{data}/{sr}_{config[WANDB][run_name]}
