--- a/egg/zoo/emergent_captioner/finetuning/configs/mle.yml
+++ b/egg/zoo/emergent_captioner/finetuning/configs/mle.yml
@@ -1,8 +1,8 @@
-DEBUG : False
+DEBUG : True
 INIT_VAL : True
 GREEDY_BASELINE : False
 SAVE_BEST_METRIC : True # to save nothing : = False and checkpoint_freq = 0
-ONLY_INFERENCE : True
+ONLY_INFERENCE : False
 ONLY_VAL : False
 
 captions_type : "mistral" #coco, (mistral, mistral_4), blip_holistic
@@ -25,7 +25,7 @@ log_spice : True
 
 finetune_model : llm
 freeze_wte : False
-
+freeze_adapter : False
 neg_mining:
   curricullum : {"rand" : 10} # "easy" : 3, "medium": 7, "hard" : 20} #indexed from 1 {"medium" : 3, "hard" : 10}
   bag_size : 5
@@ -36,7 +36,7 @@ neg_mining:
 opts: 
   baseline : mean
   n_epochs : 10
-  batch_size : 32 #10 for ada
+  batch_size : 2 #10 for ada
   lr :  2e-5
   max_len : 50
   checkpoint_freq : 0
