--- a/egg/zoo/emergent_captioner/finetuning/configs/sr_llm.yml
+++ b/egg/zoo/emergent_captioner/finetuning/configs/sr_llm.yml
@@ -1,8 +1,8 @@
-DEBUG : False # if true : model saving, logging turned off.  
+DEBUG : True # if true : model saving, logging turned off.  
 INIT_VAL : True
 GREEDY_BASELINE : False
 SAVE_BEST_METRIC : True # to save nothing : = False and checkpoint_freq = 0
-ONLY_INFERENCE : False
+ONLY_INFERENCE : True
 ONLY_VAL : False
 
 captions_type : "coco" #coco, (mistral, mistral_4), blip_holistic
@@ -24,7 +24,7 @@ mllm : "clipcap"
 lora : True
 finetune_model : llm # {llm, clip} # automatically freeze gpt.transformer or CLIP
 lora_rank : 32
-clip_mlp_ft : False
+clip_mlp_ft : False 
 adapter_lora : False
 adapter_rank : 32
 clip_text : False
@@ -61,7 +61,7 @@ WANDB:
   sweep_run_count : 100
   entity : "manugaur"
   project : "emergent_captioner"
-  run_name :  llm_ft_wte_frozen_lr9e8 #adapter_r32 #lr9e8_lora_r32_mlp_ft 
+  run_name :  lr9e8_lora_r32 #adapter_r32 #lr9e8_lora_r32_mlp_ft 
   log_mmvp_all : False
 
 inference : 
