--- a/egg/zoo/emergent_captioner/finetuning/configs/sr_c_1.yml
+++ b/egg/zoo/emergent_captioner/finetuning/configs/sr_c_1.yml
@@ -35,7 +35,7 @@ freeze_adapter : False
 log_spice : False
 
 neg_mining:
-  curricullum : {"rand_crrclm" : 20} #,  "medium" : 5, "hard" : 10} # indexed from 1
+  curricullum : {"easy" : 5, "medium": 12, "hard" : 20} #,  "medium" : 5, "hard" : 10} # indexed from 1
   bag_size : 5
   save_using_neg : False #save model i.e best on neg_dataloader 
   val_bag_size : 5
@@ -61,7 +61,7 @@ WANDB:
   sweep_run_count : 100
   entity : "manugaur"
   project : "emergent_captioner"
-  run_name : rand_crrclm_bsz5 #adapter_r32 #lr9e8_lora_r32_mlp_ft 
+  run_name : 5e12m20h_bsz5 #adapter_r32 #lr9e8_lora_r32_mlp_ft 
   log_mmvp_all : False
 
 inference : 
