--- a/egg/zoo/emergent_captioner/finetuning/configs/sr_c_1.yml
+++ b/egg/zoo/emergent_captioner/finetuning/configs/sr_c_1.yml
@@ -1,5 +1,5 @@
-DEBUG : False # if true : model saving, logging turned off.  
-INIT_VAL : True
+DEBUG : True # if true : model saving, logging turned off.  
+INIT_VAL : False
 GREEDY_BASELINE : False
 SAVE_BEST_METRIC : True # to save nothing : = False and checkpoint_freq = 0
 ONLY_INFERENCE : False
@@ -35,8 +35,7 @@ freeze_adapter : False
 log_spice : False
 
 neg_mining:
-  curricullum : {"easy" : 5, "medium": 12, "hard" : 20} #,  "medium" : 5, "hard" : 10} # indexed from 1
-  bag_size : 5
+  curricullum : {1 : ["easy",5],  3: ["medium", 3], 5 : ["hard", 7], 15 : ["hard", 5], 17:["hard", 7], 20 :["hard", 10]} #,  "medium" : 5, "hard" : 10} # indexed from 1
   save_using_neg : False #save model i.e best on neg_dataloader 
   val_bag_size : 5
   val_level : "rand"
@@ -55,13 +54,13 @@ opts:
   recv_clip_model : ViT-B/32 #ViT-L/14@336px
 
 WANDB:
-  logging : True
+  logging : False
   sweep : False
   sweep_id: ""
   sweep_run_count : 100
   entity : "manugaur"
   project : "emergent_captioner"
-  run_name : 5e12m20h_bsz5 #adapter_r32 #lr9e8_lora_r32_mlp_ft 
+  run_name : 7E20H_bsz5 #adapter_r32 #lr9e8_lora_r32_mlp_ft 
   log_mmvp_all : False
 
 inference : 
