--- a/egg/zoo/emergent_captioner/finetuning/configs/sr_3_easy.yml
+++ b/egg/zoo/emergent_captioner/finetuning/configs/sr_3_easy.yml
@@ -1,7 +1,7 @@
 DEBUG : False # if true : model saving, logging turned off.  
 INIT_VAL : True
 GREEDY_BASELINE : False
-SAVE_BEST_METRIC : True # to save nothing : = False and checkpoint_freq = 0
+SAVE_BEST_METRIC : False # to save nothing : = False and checkpoint_freq = 0
 ONLY_INFERENCE : False
 ONLY_VAL : False
 
@@ -35,8 +35,9 @@ freeze_adapter : False
 log_spice : False
 
 neg_mining:
-  curricullum : {"easy" : 20} #,  "medium" : 5, "hard" : 10} # indexed from 1
+  curricullum :  {20 : ["easy",5]} #,  "medium" : 5, "hard" : 10} # indexed from 1
   bag_size : 5
+  save_optimizer : True
   save_using_neg : False #save model i.e best on neg_dataloader 
   val_bag_size : 5
   val_level : "rand"
@@ -47,7 +48,7 @@ opts:
   batch_size : 100
   lr : 9e-8 #2e-5
   max_len : 50
-  checkpoint_freq : 0
+  checkpoint_freq : 1
   num_workers : 16
   dataset_dir : /home/manugaur/coco
   mle_model_path : /home/manugaur/EGG/checkpoints/blip2mistral/mle/best.pt #it loads only sender.clipcap (adapter + llm)
@@ -70,3 +71,4 @@ inference :
 
 #DEBUG, INIT_VAL | ONLY_INFERENCE,  , logging, save_using_neg
 #CKPT_DIR = f"{data}/{sr}_{config[WANDB][run_name]}
+
