--- a/egg/zoo/emergent_captioner/finetuning/configs/sr_3_easy.yml
+++ b/egg/zoo/emergent_captioner/finetuning/configs/sr_3_easy.yml
@@ -1,4 +1,4 @@
-DEBUG : True # if true : model saving, logging turned off.  
+DEBUG : False  # if true : model saving, logging turned off.  
 INIT_VAL : True
 GREEDY_BASELINE : False
 SAVE_BEST_METRIC : True # to save nothing : = False and checkpoint_freq = 0
@@ -35,7 +35,7 @@ freeze_adapter : False
 log_spice : False
 
 neg_mining:
-  curricullum :  {2 : ["easy",5]} #,  "medium" : 5, "hard" : 10} # indexed from 1
+  curricullum :  {10 : ["easy",5], 13 : ["hard",3], 16 : ["hard",5], 20 : ["hard",10]} #,  "medium" : 5, "hard" : 10} # indexed from 1
   save_optimizer : True
   save_using_neg : False #save model i.e best on neg_dataloader 
   val_bag_size : 5
@@ -65,7 +65,7 @@ WANDB:
   sweep_run_count : 100
   entity : "manugaur"
   project : "emergent_captioner"
-  run_name : easy_bsz5 #adapter_r32 #lr9e8_lora_r32_mlp_ft 
+  run_name : crrclm_1 #adapter_r32 #lr9e8_lora_r32_mlp_ft 
   log_mmvp_all : False
 
 inference : 
@@ -74,4 +74,5 @@ inference :
 
 #DEBUG, INIT_VAL | ONLY_INFERENCE,  , logging, save_using_neg
 #CKPT_DIR = f"{data}/{sr}_{config[WANDB][run_name]}
+
 
