--- a/egg/zoo/emergent_captioner/finetuning/configs/sr_3_med.yml
+++ b/egg/zoo/emergent_captioner/finetuning/configs/sr_3_med.yml
@@ -1,7 +1,7 @@
-DEBUG : False # if true : model saving, logging turned off.  
+DEBUG : False  # if true : model saving, logging turned off.  
 INIT_VAL : True
 GREEDY_BASELINE : False
-SAVE_BEST_METRIC : False # to save nothing : = False and checkpoint_freq = 0
+SAVE_BEST_METRIC : True # to save nothing : = False and checkpoint_freq = 0
 ONLY_INFERENCE : False
 ONLY_VAL : False
 
@@ -35,16 +35,19 @@ freeze_adapter : False
 log_spice : False
 
 neg_mining:
-  curricullum :  {20 : ["medium",5]} #,  "medium" : 5, "hard" : 10} # indexed from 1
-  bag_size : 5
+  curricullum :  {10 : ["medium",10], 13 : ["hard",3], 16 : ["hard",5], 20 : ["hard",10]} #,  "medium" : 5, "hard" : 10} # indexed from 1
   save_optimizer : True
   save_using_neg : False #save model i.e best on neg_dataloader 
   val_bag_size : 5
   val_level : "rand"
 
+resume_training : 
+  do : False
+  dir : sr_easy_bsz5
+  load_epoch  : 2 
+
 opts: 
   baseline : mean
-  n_epochs : 20
   batch_size : 100
   lr : 9e-8 #2e-5
   max_len : 50
@@ -62,7 +65,7 @@ WANDB:
   sweep_run_count : 100
   entity : "manugaur"
   project : "emergent_captioner"
-  run_name : medium_bsz5 #adapter_r32 #lr9e8_lora_r32_mlp_ft 
+  run_name : crrclm_1_med #adapter_r32 #lr9e8_lora_r32_mlp_ft 
   log_mmvp_all : False
 
 inference : 
@@ -71,4 +74,5 @@ inference :
 
 #DEBUG, INIT_VAL | ONLY_INFERENCE,  , logging, save_using_neg
 #CKPT_DIR = f"{data}/{sr}_{config[WANDB][run_name]}
+
 
