--- a/egg/zoo/emergent_captioner/finetuning/configs/sr_c_4.yml
+++ b/egg/zoo/emergent_captioner/finetuning/configs/sr_c_4.yml
@@ -18,26 +18,36 @@ diff_lr: False
 contrastive : False
 reinforce : True
 mllm : "clipcap"
+
+
 #lora
 lora : True
-lora_rank : 32 #64 for clip
-clip_mlp_ft : False
-log_spice : True
+finetune_model : both # {gpt, clip} # automatically freeze gpt.transformer or CLIP
+lora_rank : 32
+clip_mlp_ft : True
+adapter_lora : False
+adapter_rank : 32
+clip_text : False
 
-finetune_model : llm # {gpt, clip} # automatically freeze gpt.transformer or CLIP
-freeze_wte : False
+# freezing layers
+freeze_wte : True
 freeze_adapter : False
+log_spice : False
 
 neg_mining:
-  curricullum : {"medium" : 10} #,  "medium" : 5, "hard" : 10} # indexed from 1
-  bag_size : 3
+  curricullum :  {3 : ["hard", 2], 8 : ["hard",3], 10 : ["hard",5], 12 : ["hard",7], 14 : ["hard",10], 17 : ["hard",15], 20 : ["hard", 20] }
+  save_optimizer : False
   save_using_neg : False #save model i.e best on neg_dataloader 
   val_bag_size : 5
   val_level : "rand"
 
+resume_training : 
+  do : False
+  dir : sr_easy_bsz5
+  load_epoch  : 2 
+
 opts: 
   baseline : mean
-  n_epochs : 10
   batch_size : 100
   lr : 9e-8 #2e-5
   max_len : 50
@@ -55,12 +65,14 @@ WANDB:
   sweep_run_count : 100
   entity : "manugaur"
   project : "emergent_captioner"
-  run_name :  medium_bsz3_final #suffix to "sr_{data}_"
+  run_name : crrclm_5 #adapter_r32 #lr9e8_lora_r32_mlp_ft 
   log_mmvp_all : False
 
 inference : 
   batch_size : 128
   output_dir : /home/manugaur/EGG/inference_preds/
 
-#DEBUG, ONLY_INFERENCE,  INIT_VAL, logging, save_using_neg
+#DEBUG, INIT_VAL | ONLY_INFERENCE,  , logging, save_using_neg
 #CKPT_DIR = f"{data}/{sr}_{config[WANDB][run_name]}
+
+
